Fixed layout overflow problems on Sidebar and Dashboard components

--- a/woc-portal/src/App.css
+++ b/woc-portal/src/App.css
@@ -1,5 +1,10 @@
 .App {
   text-align: center;
+  display: flex;
+  width: 100vw; 
+  height: 100vh;
+  min-width: 100vw;
+  min-height: 100vh;
 }
 
 .App-logo {
@@ -37,6 +42,15 @@
   }
 }
 
+.right-side {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  color: navy;
+  width: 100%;
+  height: 100%;
+}
+
 .sidebar {
   width: 22%;
   height: 100vh;
@@ -48,7 +62,7 @@
 }
 
 .sidebar-logo{
-  width: 60%;
+  width: 50%;
   height: auto;
   display: block;
   margin: 0 auto 1rem auto;
@@ -57,6 +71,7 @@
 }
 
 .sidebar-home-link{
+  font-size: 20px;
   cursor: pointer;
   color: navy;
   font-weight: bold;
@@ -120,7 +135,7 @@
 }
 
 .dashboard{
-    width: 78%;
+    /* width: 78%; */
     height: 100vh;
     background: rgba(248, 240, 203, 255);
     padding: 2rem;
